--- a/agileapi/src/main/resources/application.properties
+++ b/agileapi/src/main/resources/application.properties
@@ -24,3 +24,6 @@ spring.jpa.hibernate.ddl-auto=create
 # Default database user and password
 spring.datasource.username=sa
 spring.datasource.password=
+
+spring.sql.init.mode=always
+spring.jpa.defer-datasource-initialization=true
