--- a/agileapi/src/main/resources/application.properties
+++ b/agileapi/src/main/resources/application.properties
@@ -18,6 +18,9 @@ spring.datasource.url=jdbc:h2:mem:isst
 #spring.datasource.url=jdbc:h2:file:~/isst
 
 # Creates the database schema when the application starts
+spring.sql.init.mode=always
+spring.datasource.initialization-mode=always
+spring.jpa.defer-datasource-initialization=true
 spring.jpa.hibernate.ddl-auto=create
 
 
@@ -25,5 +28,6 @@ spring.jpa.hibernate.ddl-auto=create
 spring.datasource.username=sa
 spring.datasource.password=
 
-spring.sql.init.mode=always
-spring.jpa.defer-datasource-initialization=true
+
+logging.level.org.springframework.security=DEBUG
+
