--- a/agileapi/pom.xml
+++ b/agileapi/pom.xml
@@ -101,6 +101,10 @@
 			<version>0.11.5</version>
 			<scope>runtime</scope>
 		</dependency>
+		<dependency>
+			<groupId>com.fasterxml.jackson.core</groupId>
+			<artifactId>jackson-databind</artifactId>
+		</dependency>
 	</dependencies>
 
 	<build>
@@ -111,5 +115,6 @@
 			</plugin>
 		</plugins>
 	</build>
+	
 
 </project>
